--- a/hugo.toml
+++ b/hugo.toml
@@ -33,13 +33,13 @@ enableEmoji = true
     weight = 1
 
   [[menu.main]]
-    name = "Blog"
-    url = "/posts"
+    name = "About"
+    url = "/about"
     weight = 2
 
   [[menu.main]]
-    name = "About"
-    url = "/about"
+    name = "Blog"
+    url = "/posts/"
     weight = 3
 
   [[menu.main]]
