--- a/hugo.toml
+++ b/hugo.toml
@@ -39,7 +39,7 @@ enableEmoji = true
 
   [[menu.main]]
     name = "Blog"
-    url = "/posts/"
+    url = "/posts"
     weight = 3
 
   [[menu.main]]
