--- a/hugo.toml
+++ b/hugo.toml
@@ -96,7 +96,7 @@ enableEmoji = true
     #lge = "example96.png"
 
   [params.banner]
-    image = "/static/img/banner.jpg"
+    image = "/img/banner.jpg"
 
 #  [params.style]
 #    googleFonts = ["Cardo", "Crimson+Text", "Merriweather", "Playfair+Display:400,700", "Roboto+Slab"]
