--- a/hugo.toml
+++ b/hugo.toml
@@ -78,8 +78,8 @@ enableEmoji = true
 # Paramaters for the whole site
 [params]
   title = "MidShore Summer STEM Camp"
-  subtitle = "Description goes here"
-  keywords = ["summer camp", "st michaels", "stem", "easton"]
+  subtitle = "Discover our STEM Summer Camp for disadvantaged youth! Our director, Mr. Bob DeGour, was a naval officer."
+  keywords = ["summer camp", "tilghman", "stem", "easton", "denton"]
   languageCode = "en" # For accessibility this needs to be set. You can find all language codes at https://www.w3schools.com/tags/ref_language_codes.asp
   #bible_popups = "faithlife" #faithlife, blb
   #bible_version = "CSB" #HCSB, NIV, NLT, ESV, etc.
