--- a/hugo.toml
+++ b/hugo.toml
@@ -53,9 +53,9 @@ enableEmoji = true
     weight = 5
 
   [[menu.main]]
-    name = "Tilghman"
+    name = "Bay 100"
     parent = "Locations"
-    url = "/tilghman-location"
+    url = "/bay-100-location"
     weight = 1
 
   [[menu.main]]
@@ -79,7 +79,7 @@ enableEmoji = true
 [params]
   title = "MidShore Summer STEM Camp"
   subtitle = "Discover our STEM Summer Camp for disadvantaged youth! We are currently operating on the Eastern Shore of Maryland."
-  keywords = ["summer camp", "tilghman", "stem", "easton", "denton"]
+  keywords = ["summer camp", "tilghman", "stem", "easton", "denton", "st. michaels"]
   languageCode = "en" # For accessibility this needs to be set. You can find all language codes at https://www.w3schools.com/tags/ref_language_codes.asp
   #bible_popups = "faithlife" #faithlife, blb
   #bible_version = "CSB" #HCSB, NIV, NLT, ESV, etc.
