--- a/hugo.toml
+++ b/hugo.toml
@@ -28,13 +28,13 @@ enableEmoji = true
 #Use weight= to specify the order of menu items, and parent= to create a submenu item.
 [menu]
   [[menu.main]]
-    name = "Home"
-    url = "/"
+    name = "About"
+    url = "/about"
     weight = 1
 
   [[menu.main]]
-    name = "About"
-    url = "/about"
+    name = "Donate"
+    url = "https://operations.daxko.com/online/2043/OnlineGiving/Donation.mvc"
     weight = 2
 
   [[menu.main]]
